# riptide_cpp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILDNOTES  CMakeLists.txt  Largest three numbers.cpp  README.md  pyproject.toml  setup.py  setup_309.py  setup_30910.py
.github/workflows/: conda_package.yaml  native_sanity.yml  python_os_builds.yml  python_package.yml
bdist/: riptide_cpp-1.5-1.src.rpm
bench/: CMakeLists.txt
bench/riptide_bench/riptide_bench/: CMakeLists.txt  bench_groupby.cpp  bench_logging.cpp  bench_one_input.cpp  bench_reduce.cpp  hash_linear_bench.cpp  main.cpp  memcmp_bench.cpp  riptide_bench.sln  riptide_bench.vcxproj  riptide_bench.vcxproj.filters
cmake/: AddCommonSettings.cmake  AddCpm.cmake  AddPythonSupport.cmake  AddPythonSupportExact.cmake  CopyRuntimeDeps.cmake  FindNumPy.cmake  add_git_submodules.cmake
conda_recipe/: bld.bat  bld_old.bat  build.sh  build_old.sh  conda_build_config.yaml  meta.yaml
dev_tools/: gen_requirements.py  run_clang_format.py
extras/: CMakeLists.txt
extras/sdsfile/: CMakeLists.txt  dllmain.cpp  sdsfile.rc.in  sdsfile.targets
extras/sdsfile/nuget-project.in/: sdsfile.csproj
src/: ArenaMemory.cpp  ArenaMemory.h  Array.cpp  Array.h  BasicMath.cpp  BasicMath.h  Bins.cpp  Bins.h  BitCount.cpp  BitCount.h  CMakeLists.txt  CRC32.cpp  CommonInc.h  Compare.cpp  Compare.h  Compress.cpp  Compress.h  Convert.cpp  Convert.h  DateTime.cpp  DateTime.h  Defs.h  Ema.cpp  Ema.h  FileReadWrite.cpp  FileReadWrite.h  GroupBy.cpp  GroupBy.h  HashFunctions.cpp  HashFunctions.h  HashLinear.cpp  HashLinear.h  Heap.h  Hook.cpp  Hook.h  Logger.cpp  Logger.h  MANIFEST.in  MathThreads.cpp  MathThreads.h  (+61 more)
src/lib/: zstd
src/logging/: log_common.h  logger.h  logging.cpp  logging.h  logging_service.h  timer.h  waiting_deque.h
src/simd/: avx2.h
src/zstd/: COPYING
test/: CMakeLists.txt
test/riptide_python_test/: CMakeLists.txt  basic_math_tests.cpp  bins_bsearch_tests.cpp  bins_sorted_tests.cpp  combine_accum_tests.cpp  datetime_tests.cpp  ema_test.cpp  groupby_tests.cpp  hash_linear_tests.cpp  lexsort_tests.cpp  logging_python_tests.cpp  main.cpp  math_worker_tests.cpp  mbget_tests.cpp  mkalign_tests.cpp  reduce_tests.cpp  riptide_python_test.h  riptide_python_test.vcxproj  riptide_python_test.vcxproj.filters  test_convert.cpp  test_reduce.cpp  test_riptide.cpp  test_unary_ops.cpp  tests.cpp  utility_functions.cpp
test/riptide_test/: CMakeLists.txt  add_typed_tests.h  buffer_tests.cpp  flat_hash_map_tests.cpp  invalid_tests.cpp  is_member_tests.cpp  logging_test.cpp  main.cpp  math_tests.cpp  math_worker_tests.cpp  numpy_traits_tests.cpp  riptide_test.sln  riptide_test.vcxproj  riptide_test.vcxproj.filters  simd_tests.cpp  test_one_input.cpp  test_operation_traits.cpp  test_unary.cpp  to_type_str.h
test/sdsfile_test/: CMakeLists.txt  main.cpp  main_tests.cpp
test/utility/: CMakeLists.txt  any_const_buffer.h  buffer.h  mem_buffer.h  np_util.h  span.h  tuple_util.h  ut_core.h  ut_extensions.h  vector_util.h
tests/: CMakeLists.txt  main.cpp  riptide_tests.cpp  sds_tests.cpp  test_sample.cpp
